--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/SumanB1432/Orbo.io_assignment#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
